09-04=2005 Qball <Qball@qballcow.nl>
	* src/plyalist3.c:	Return of the TreeFilter.. now with regex
	support.

27-03-2005 Qball <Qball@qballcow.nl>
	* src/playlist3.c:	Add an add location to the playlist right
	mouse menu.
	* src/tray-icon.c:	Ctrl-click now pause/play's aswell.
	* src/tray-icon.c:	Extra check so it won't resize < 0

old:	Qball <Qball@qballcow.nl>
	* fix for not drawn section of main window

17-03-2005 Qball <Qball@qballcow.nl>
	* src/libmpd.[c|h]:	possible fix for tracking db updates.
	* src/main.c:		possible fix for tracking db. adding db change
	handle.
	* Fix for autotools. thanks to Eric Wong.
	* Fix for bug that doesnt remove songid = 0;
	* src/libmpd.c:		Fixed songid = 0;

08-03-2005 Qball <Qball@qballcow.nl>
	* src/open-location.c:	Fixed crash. (check for memory leaks. (memprof
	crashes).
	* src/config.c:		Fix severall memory leaks.
	* src/osb-browser.c:	Fix memory leak.	
	* src/main.c:		Fixed bug #379. on connect error dialog is
	destroyed.
	* src/playlist3.c:	Fix for bug #378. It checks for strlen first.
	* src/playlist3.c:	find is inactive if entry is empty.
	* src/debug_printf.c:	Default debug level to DEBUG_ERROR
	* src/main.c:		commandline accepts --enable-debug=0,1,2
	0=error, 1=error,warning, 2=all. default = 0;

07-03-2005 Qball <qball@qballcow.nl>
	* src/preferences.c:	make osb source list working completely.
	* glade/gmpc.glade:	Made preferences menu modal.

3-03-2005 Qball <qball@qballcow.nl>
	* src/playlist3.c:	Removing saved playlist implemented.
	* src/libmpd.[c|h]:	Added delete playlist function.

2-03-2005 Qball <qball@qballcow.nl>
	* src/preferences.c:	Saving a playlist that allready exists now
	gives an error and the possibility to change the name.
	* src/libmpd.c:		mpd_ob_playlist_save now returns a error if
	playlist exists
	* src/preferences.c:	Fixed showing/selecting output device.
	* src/libmpd.c:		Added a check version function.

1-03-2005 Qball <qball@qballcow.nl>
	* src/palylist.c:	Disabled moving of row's for now.