@@ -141,7 +141,8 @@
 		      <property name="items" translatable="yes">for artists
 for albums
 for song title
-for filename</property>
+for filename
+all (slow)</property>
 		      <property name="add_tearoffs">False</property>
 		      <property name="focus_on_click">True</property>
 		    </widget>
